force-app/main/default/objects/Environment_Connection__mdt/Environment_Connection__mdt.object-meta.xml
<CustomObject>
    <description>Stores allowed environment connection names for deployment comparison.</description>
    <label>Environment Connection</label>
    <pluralLabel>Environment Connections</pluralLabel>
</CustomObject>