force-app/main/default/objects/Environment_Connection__mdt/fields/Environment_Label__c.field-meta.xml
<CustomField>
    <fullName>Environment_Label__c</fullName>
    <label>Environment Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>