force-app/main/default/objects/Environment_Connection__mdt/fields/Environment_Type__c.field-meta.xml
<CustomField>
    <fullName>Environment_Type__c</fullName>
    <label>Environment Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>